# template-tools

./: pyproject.toml  template.py  template_tools.py  test.py  webpage.py
src/template_tools/: __init__.py  template.py  website_interaction.py
tests/: test_template.py
tests/data/template/proj1/: extends.html  extends2times.html  parent.html  parent1time.html  single.html
tests/snapshots/test_template/test_extends2times_template_render/: extends2times_render
tests/snapshots/test_template/test_extends2times_template_schema/: extends2times_schema
tests/snapshots/test_template/test_extends_template_render/: extends_render
tests/snapshots/test_template/test_extends_template_schema/: extends_schema
tests/snapshots/test_template/test_single_template_render/: single_render
tests/snapshots/test_template/test_single_template_schema/: single_schema
